--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -12,6 +12,7 @@
         width: 100%;
         margin: 0;
         padding: 0;
+        overflow: hidden;
       }
     </style>
 <head>
@@ -95,7 +96,7 @@
             </div>
         </div>
     </header>
-<div class="cover" style="position: absolute;height: 100%; width: 100%;z-index: 100000;">
+<div class="cover" style="position: absolute;top:0;height: 100%; width: 100%;z-index: 100000;">
     <div id="map"></div>
 </div>
 
