--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -102,7 +102,7 @@
 
 
     <!-- google map street -->
-    <div class="cover" style="position: fixed;top:0;height: 100%; width: 100vw;z-index: 100000;">
+    <div class="cover" style="position: fixed;top:0;height: 100vh; width: 100vw;z-index: 100000;">
         <div id="map"></div>
     </div>
 
